--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -43,9 +43,6 @@ on:
         type: string
       test_labels:
         type: string
-      multi_arch_test:
-        type: boolean
-        default: false
   push:
     branches:
       - ADHOCBUILD
@@ -57,15 +54,7 @@ jobs:
   configure_test_matrix:
     name: "Configure test matrix (${{ inputs.amdgpu_families }})"
     # if there is a test machine available
-    # TODO(TheRock#3288): Re-enable gfx950-dcgpu runners once we get more capacity
-    if: >-
-      ${{
-        inputs.test_runs_on != '' &&
-        !(
-          inputs.amdgpu_families == 'gfx950-dcgpu' &&
-          inputs.multi_arch_test == true
-        )
-      }}
+    if: ${{ inputs.test_runs_on != '' }}
     runs-on: ${{ inputs.test_runs_on }}
     outputs:
       components: ${{ steps.configure.outputs.components }}
