cleanup make_directory

--- a/base/aux-overlay/CMakeLists.txt
+++ b/base/aux-overlay/CMakeLists.txt
@@ -14,7 +14,7 @@ project(therock-aux-overlay)
 
 if(NOT WIN32)
   add_custom_target(symlinks ALL
-    COMMAND "${CMAKE_COMMAND}" -E make_directory "${CMAKE_CURRENT_BINARY_DIR}/bin" 
+    COMMAND "${CMAKE_COMMAND}" -E make_directory "${CMAKE_CURRENT_BINARY_DIR}/bin"
     COMMAND "${CMAKE_COMMAND}" -E create_symlink "lib/llvm" "${CMAKE_CURRENT_BINARY_DIR}/llvm"
     COMMAND "${CMAKE_COMMAND}" -E create_symlink "lib/llvm/amdgcn" "${CMAKE_CURRENT_BINARY_DIR}/amdgcn"
     COMMAND "${CMAKE_COMMAND}" -E create_symlink "lib/llvm/bin/amdclang" "${CMAKE_CURRENT_BINARY_DIR}/bin/amdclang"
@@ -26,6 +26,7 @@ if(NOT WIN32)
     COMMAND "${CMAKE_COMMAND}" -E create_symlink "lib/llvm/bin/offload-arch" "${CMAKE_CURRENT_BINARY_DIR}/bin/offload-arch"
   )
   install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/bin"
     "${CMAKE_CURRENT_BINARY_DIR}/llvm"
     "${CMAKE_CURRENT_BINARY_DIR}/amdgcn"
     "${CMAKE_CURRENT_BINARY_DIR}/bin/amdclang"
