Consolidate functional tests into test_artifacts.yml
Remove duplicate test_functional.yml and route functional tests through
test_artifacts.yml with run_functional_tests input. Update fetch_test_configurations.py
to use IS_FUNCTIONAL_TEST_WORKFLOW env var and update CI workflows accordingly.

Signed-off-by: Lenine Ajagappane <Lenine.Ajagappane@amd.com>

--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -22,6 +22,9 @@ on:
         type: string
       test_labels:
         type: string
+      run_functional_tests:
+        type: boolean
+        default: false
   workflow_call:
     inputs:
       artifact_group:
@@ -43,6 +46,9 @@ on:
         type: string
       test_labels:
         type: string
+      run_functional_tests:
+        type: boolean
+        default: false
   push:
     branches:
       - ADHOCBUILD
@@ -90,6 +96,7 @@ jobs:
           AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
           TEST_TYPE: ${{ inputs.test_type }}
           TEST_LABELS: ${{ inputs.test_labels }}
+          IS_FUNCTIONAL_TEST_WORKFLOW: ${{ inputs.run_functional_tests == true && 'true' || 'false' }}
         run: python ./build_tools/github_actions/fetch_test_configurations.py
 
   test_sanity_check:
