--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -56,6 +56,7 @@ jobs:
         --group-add 992
         --group-add 110
         --ulimit memlock=-1:-1
+        --cap-add=SYS_PTRACE
         --security-opt seccomp=unconfined
         --env-file /etc/podinfo/gha-gpu-isolation-settings
         --user 0:0
