--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 [submodule "rocm-systems"]
 	path = rocm-systems
 	url = https://github.com/ROCm/rocm-systems.git
-	branch = develop
+	branch = users/kcossett-amd/add-hpc-examples-phase-1
 [submodule "spirv-llvm-translator"]
 	path = compiler/spirv-llvm-translator
 	url = https://github.com/ROCm/SPIRV-LLVM-Translator.git
