Copy latest runfile installer code

--- a/build_tools/packaging/runfile-installer/package-puller/config/therock/rocm/release/rocm-release-rpm.config
+++ b/build_tools/packaging/runfile-installer/package-puller/config/therock/rocm/release/rocm-release-rpm.config
@@ -1,5 +1,5 @@
 ROCM_REPO="[rocm]
-name=ROCm {{ROCM_VERSION}}
+name=ROCm {{VERSION_STRING}}
 baseurl=https://repo.amd.com/rocm/packages/rhel10/x86_64
 enabled=1
 gpgcheck=1
